src/test/FinalFail3/FinalFail3.expected
error: FinalFail3.panda:5:1: final class 'NoSubclassing' cannot be subclassed
1 error
