src/test/FinalFail3/FinalFail3.panda
@final
class NoSubclassing {
}

class Test : NoSubclassing {
}